[metadata]name = polygphys-inventaireversion = 1description = Outils pour des programmes à l'interne du département de physique de Polytechnique Montréal.author = Émile Jetzerauthor_email = emile.jetzer@polymtl.ca#long_description = file: readme.md[options]python_requires = >=3.8, <3.10install_requires =
    polygphys    pandas    sqlalchemy
    openpyxl
    xlwt
    gitpythonpackages = find:include_package_data = True[options.entry_points]
gui_scripts =
    polygphys-inventaire = polygphys_inventaire:main
   